# hardware_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt  kinect_interface.cpp  kinect_interface.h  kinect_interface_tester.cpp  viewer.cpp
src/kinect_interface/: CMakeLists.txt  kinect_interface.cpp
